# Archgame

./: AUTHORS  ChangeLog  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: events.yml  tests.yml
archgame/: bags.py  bot_game_starter.py  bugs.txt  cli.py  constants.py  events.py  events_runner.py  game.py  game_server.py  game_starter.py  gamers.py  main.py  obj.py  silent_bot_game_starter.py  texts.py
archgame/telegram/: telegram_game_starter.py
archgame/tests/unit/: test_events.py
docs/: cli_gui_example.txt  events_notes.txt
src/archgame/: bags.py  cli.py  constants.py  events.py  events_runner.py  game.py  main.py  obj.py  texts.py
