[metadata]
name = archgame
summary = Have some IT fun
description-file =
    README.md

[files]
packages =
    archgame

[entry_points]
console_scripts =
    archgame = archgame.game_starter:game_starter
    archgame-telegram-server = archgame.telegram.telegram_game_starter:main
    archgame_events = archgame.events_runner:main
